--- a/app/src/main/res/layout/fragment_page_1.xml
+++ b/app/src/main/res/layout/fragment_page_1.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -81,6 +82,11 @@
                                             android:orientation="vertical"
                                             android:paddingBottom="15sp"
                                             >
+                                            <kr.re.kitech.tractorinspectionrobot.views.component.ControlEmergencyButtons
+                                                android:id="@+id/control_emergency_buttons"
+                                                android:layout_width="match_parent"
+                                                android:layout_height="wrap_content"
+                                                tools:ignore="TooDeepLayout" />
                                             <kr.re.kitech.tractorinspectionrobot.views.component.ControlCameraMovementTouchButtons
                                                 android:id="@+id/control_camera_movement_touch_buttons"
                                                 android:layout_width="match_parent"
