--- a/app/src/main/res/layout/component_monit_target.xml
+++ b/app/src/main/res/layout/component_monit_target.xml
@@ -59,8 +59,7 @@
                     android:backgroundTint="@color/cardview_dark_background"
                     android:layout_margin="3dp"
                     android:padding="5dp"
-                    android:layout_weight="1"
-                    android:visibility="gone">
+                    android:layout_weight="1">
                     <TextView
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
