--- a/app/src/main/res/layout/component_control_camera_movement_touch_buttons.xml
+++ b/app/src/main/res/layout/component_control_camera_movement_touch_buttons.xml
@@ -2,177 +2,236 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     style="@style/dataBox"
     android:layout_margin="5dp">
-    <LinearLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="left">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="gravity"
-                    style="@style/tabTopTitle"
-                    android:text="카메라 앵글 이동"/>
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="20dp">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_weight="1">
-                <Button
-                    android:id="@+id/btn_x_up"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerInParent="true"
-                    android:drawableTop="@drawable/baseline_refresh_24_mirror"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="서보1(+s1)"/>
-                <Button
-                    android:id="@+id/btn_x_down"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerInParent="true"
-                    android:drawableBottom="@drawable/baseline_refresh_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="서보1(-s1)"/>
-            </RelativeLayout>
+        android:layout_height="wrap_content">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_weight="1">
-                <Button
-                    android:id="@+id/btn_y_up"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerInParent="true"
-                    android:drawableTop="@drawable/baseline_arrow_upward_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="서보2(+s2)"/>
-                <Button
-                    android:id="@+id/btn_y_down"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerInParent="true"
-                    android:drawableBottom="@drawable/baseline_arrow_downward_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="서보2(-s2)"/>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_weight="1">
-                <Button
-                    android:id="@+id/btn_forward"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerInParent="true"
-                    android:drawableTop="@drawable/baseline_arrow_upward_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="서보3(+s3)"/>
-
-                <Button
-                    android:id="@+id/btn_backward"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_width="123dp"
-                    android:layout_height="58dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerInParent="true"
-                    android:layout_marginStart="3dp"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginTop="3dp"
-                    android:layout_marginEnd="3dp"
-                    android:layout_marginRight="3dp"
-                    android:layout_marginBottom="10dp"
-                    android:drawableBottom="@drawable/baseline_arrow_downward_24"
-                    android:text="서보3(-s3)"
-                    android:textSize="17sp" />
-            </RelativeLayout>
-        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:padding="10dp">
-                <TextView
-                    android:layout_width="85dp"
-                    android:layout_height="40dp"
-                    android:gravity="center_vertical|right"
-                    android:textSize="15dp"
-                    android:text="Step : "/>
-                <TextView
-                    android:id="@+id/textSeekStep"
-                    android:layout_width="70dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/rounded"
-                    android:gravity="center"
-                    android:backgroundTint="@color/option_name"
-                    android:textSize="15dp"
-                    android:text="20"/>
-                <SeekBar
-                    android:id="@+id/seekBarStep"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:padding="8dp"
-                    android:thumb="@drawable/custom_thumb"
-                    android:progressDrawable="@drawable/custom_progress"/>
+                android:gravity="center">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="left">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="gravity"
+                        style="@style/tabTopTitle"
+                        android:text="카메라 앵글 이동" />
+                </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:padding="10dp">
-                <TextView
-                    android:layout_width="85dp"
-                    android:layout_height="40dp"
-                    android:gravity="center_vertical|right"
-                    android:textSize="15dp"
-                    android:text="Millisecond : "/>
-                <TextView
-                    android:id="@+id/textSeekMills"
-                    android:layout_width="70dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/rounded"
-                    android:gravity="center"
-                    android:backgroundTint="@color/option_name"
-                    android:textSize="15dp"
-                    android:text="20"/>
-                <SeekBar
-                    android:id="@+id/seekBarMills"
+                android:paddingBottom="20dp">
+
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:padding="8dp"
-                    android:thumb="@drawable/custom_thumb"
-                    android:progressDrawable="@drawable/custom_progress"/>
+                    android:layout_height="160dp"
+                    android:layout_weight="1">
+
+                    <Button
+                        android:id="@+id/btn_x_up"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerInParent="true"
+                        android:drawableTop="@drawable/baseline_refresh_24_mirror"
+                        android:layout_height="65dp"
+                        android:textSize="17sp"
+                        android:text="서보1(+s1)" />
+
+                    <Button
+                        android:id="@+id/btn_x_down"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerInParent="true"
+                        android:drawableBottom="@drawable/baseline_refresh_24"
+                        android:layout_height="65dp"
+                        android:textSize="17sp"
+                        android:text="서보1(-s1)" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_weight="1">
+
+                    <Button
+                        android:id="@+id/btn_y_up"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerInParent="true"
+                        android:drawableTop="@drawable/baseline_arrow_upward_24"
+                        android:layout_height="65dp"
+                        android:textSize="17sp"
+                        android:text="서보2(+s2)" />
+
+                    <Button
+                        android:id="@+id/btn_y_down"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerInParent="true"
+                        android:drawableBottom="@drawable/baseline_arrow_downward_24"
+                        android:layout_height="65dp"
+                        android:textSize="17sp"
+                        android:text="서보2(-s2)" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_weight="1">
+
+                    <Button
+                        android:id="@+id/btn_forward"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerInParent="true"
+                        android:drawableTop="@drawable/baseline_arrow_upward_24"
+                        android:layout_height="65dp"
+                        android:textSize="17sp"
+                        android:text="서보3(+s3)" />
+
+                    <Button
+                        android:id="@+id/btn_backward"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_width="123dp"
+                        android:layout_height="58dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginStart="3dp"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginTop="3dp"
+                        android:layout_marginEnd="3dp"
+                        android:layout_marginRight="3dp"
+                        android:layout_marginBottom="10dp"
+                        android:drawableBottom="@drawable/baseline_arrow_downward_24"
+                        android:text="서보3(-s3)"
+                        android:textSize="17sp" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:layout_width="85dp"
+                        android:layout_height="40dp"
+                        android:gravity="center_vertical|right"
+                        android:textSize="15dp"
+                        android:text="Step : " />
+
+                    <TextView
+                        android:id="@+id/textSeekStep"
+                        android:layout_width="70dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/rounded"
+                        android:gravity="center"
+                        android:backgroundTint="@color/option_name"
+                        android:textSize="15dp"
+                        android:text="20" />
+
+                    <SeekBar
+                        android:id="@+id/seekBarStep"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:padding="8dp"
+                        android:thumb="@drawable/custom_thumb"
+                        android:progressDrawable="@drawable/custom_progress" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:layout_width="85dp"
+                        android:layout_height="40dp"
+                        android:gravity="center_vertical|right"
+                        android:textSize="15dp"
+                        android:text="Millisecond : " />
+
+                    <TextView
+                        android:id="@+id/textSeekMills"
+                        android:layout_width="70dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/rounded"
+                        android:gravity="center"
+                        android:backgroundTint="@color/option_name"
+                        android:textSize="15dp"
+                        android:text="20" />
+
+                    <SeekBar
+                        android:id="@+id/seekBarMills"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:padding="8dp"
+                        android:thumb="@drawable/custom_thumb"
+                        android:progressDrawable="@drawable/custom_progress" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+
+        <!-- 로딩 오버레이 -->
+        <RelativeLayout
+            android:id="@+id/progress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:clickable="true"
+            android:focusable="true">
+
+            <ProgressBar
+                android:layout_centerInParent="true"
+                android:layout_width="60dp"
+                android:layout_height="60dp" />
+        </RelativeLayout>
+
+        <!-- 프로그램 실행중 오버레이 -->
+        <RelativeLayout
+            android:id="@+id/program_run"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#65000000"
+            android:visibility="gone"
+            android:clickable="true"
+            android:focusable="true">
+
+            <TextView
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="프로그램 실행중입니다."
+                android:textSize="17sp" />
+        </RelativeLayout>
+
+    </RelativeLayout>
 </LinearLayout>
