--- a/app/src/main/res/layout/component_control_vim_movement_touch_buttons.xml
+++ b/app/src/main/res/layout/component_control_vim_movement_touch_buttons.xml
@@ -2,164 +2,227 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     style="@style/dataBox"
     android:layout_margin="5dp">
-    <LinearLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
+
+        <!-- 내용 전체 영역 -->
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="left">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="gravity"
-                    style="@style/tabTopTitle"
-                    android:text="빔 이동"/>
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="20dp">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_weight="1"
-                android:columnCount="3">
-                <Button
-                    android:id="@+id/btn_up"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerInParent="true"
-                    android:drawableTop="@drawable/baseline_arrow_upward_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="상(+y)"/>
-                <Button
-                    android:id="@+id/btn_leftward"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:drawableLeft="@drawable/baseline_arrow_back_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="좌(-x)"/>
-                <Button
-                    android:id="@+id/btn_rightward"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:drawableRight="@drawable/baseline_arrow_forward_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="우(+x)"/>
-                <Button
-                    android:id="@+id/btn_down"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerInParent="true"
-                    android:drawableBottom="@drawable/baseline_arrow_downward_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="하(-y)"/>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_weight="3"
-                android:columnCount="3">
-                <Button
-                    android:id="@+id/btn_forward"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerInParent="true"
-                    android:drawableTop="@drawable/baseline_keyboard_double_arrow_left_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="앞(+z)"/>
-                <Button
-                    android:id="@+id/btn_backward"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerInParent="true"
-                    android:drawableBottom="@drawable/baseline_keyboard_double_arrow_right_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="뒤(-z)"/>
-            </RelativeLayout>
-        </LinearLayout>
-        <LinearLayout
+            android:id="@+id/content_root"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:padding="10dp">
-                <TextView
-                    android:layout_width="85dp"
-                    android:layout_height="40dp"
-                    android:gravity="center_vertical|right"
-                    android:textSize="15dp"
-                    android:text="xy Step : "/>
-                <TextView
-                    android:id="@+id/textSeekStep"
-                    android:layout_width="70dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/rounded"
-                    android:gravity="center"
-                    android:backgroundTint="@color/option_name"
-                    android:textSize="15dp"
-                    android:text="20"/>
-                <SeekBar
-                    android:id="@+id/seekBarStep"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:padding="8dp"
-                    android:thumb="@drawable/custom_thumb"
-                    android:progressDrawable="@drawable/custom_progress"/>
+                android:gravity="center">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="left">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="gravity"
+                        style="@style/tabTopTitle"
+                        android:text="빔 이동" />
+                </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:padding="10dp">
-                <TextView
-                    android:layout_width="85dp"
-                    android:layout_height="40dp"
-                    android:gravity="center_vertical|right"
-                    android:textSize="15dp"
-                    android:text="z Step : "/>
-                <TextView
-                    android:id="@+id/textSeekZStep"
-                    android:layout_width="70dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/rounded"
-                    android:gravity="center"
-                    android:backgroundTint="@color/option_name"
-                    android:textSize="15dp"
-                    android:text="20"/>
-                <SeekBar
-                    android:id="@+id/seekBarZStep"
+                android:paddingBottom="20dp">
+
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:padding="8dp"
-                    android:thumb="@drawable/custom_thumb"
-                    android:progressDrawable="@drawable/custom_progress"/>
+                    android:layout_height="160dp"
+                    android:layout_weight="1"
+                    android:columnCount="3">
+
+                    <Button
+                        android:id="@+id/btn_up"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerInParent="true"
+                        android:drawableTop="@drawable/baseline_arrow_upward_24"
+                        android:layout_height="65dp"
+                        android:textSize="17sp"
+                        android:text="상(+y)" />
+
+                    <Button
+                        android:id="@+id/btn_leftward"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:drawableLeft="@drawable/baseline_arrow_back_24"
+                        android:layout_height="65dp"
+                        android:textSize="17sp"
+                        android:text="좌(-x)" />
+
+                    <Button
+                        android:id="@+id/btn_rightward"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:drawableRight="@drawable/baseline_arrow_forward_24"
+                        android:layout_height="65dp"
+                        android:textSize="17sp"
+                        android:text="우(+x)" />
+
+                    <Button
+                        android:id="@+id/btn_down"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerInParent="true"
+                        android:drawableBottom="@drawable/baseline_arrow_downward_24"
+                        android:layout_height="65dp"
+                        android:textSize="17sp"
+                        android:text="하(-y)" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_weight="3"
+                    android:columnCount="3">
+
+                    <Button
+                        android:id="@+id/btn_forward"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerInParent="true"
+                        android:drawableTop="@drawable/baseline_keyboard_double_arrow_right_24"
+                        android:layout_height="65dp"
+                        android:textSize="17sp"
+                        android:text="앞(+z)" />
+
+                    <Button
+                        android:id="@+id/btn_backward"
+                        style="@style/moveControlButtonStyle"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerInParent="true"
+                        android:drawableBottom="@drawable/baseline_keyboard_double_arrow_left_24"
+                        android:layout_height="65dp"
+                        android:textSize="17sp"
+                        android:text="뒤(-z)" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:layout_width="85dp"
+                        android:layout_height="40dp"
+                        android:gravity="center_vertical|right"
+                        android:textSize="15dp"
+                        android:text="xy Step : " />
+
+                    <TextView
+                        android:id="@+id/textSeekStep"
+                        android:layout_width="70dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/rounded"
+                        android:gravity="center"
+                        android:backgroundTint="@color/option_name"
+                        android:textSize="15dp"
+                        android:text="20" />
+
+                    <SeekBar
+                        android:id="@+id/seekBarStep"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:padding="8dp"
+                        android:thumb="@drawable/custom_thumb"
+                        android:progressDrawable="@drawable/custom_progress" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:layout_width="85dp"
+                        android:layout_height="40dp"
+                        android:gravity="center_vertical|right"
+                        android:textSize="15dp"
+                        android:text="z Step : " />
+
+                    <TextView
+                        android:id="@+id/textSeekZStep"
+                        android:layout_width="70dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/rounded"
+                        android:gravity="center"
+                        android:backgroundTint="@color/option_name"
+                        android:textSize="15dp"
+                        android:text="20" />
+
+                    <SeekBar
+                        android:id="@+id/seekBarZStep"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:padding="8dp"
+                        android:thumb="@drawable/custom_thumb"
+                        android:progressDrawable="@drawable/custom_progress" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+
+        <!-- 로딩 오버레이 -->
+        <RelativeLayout
+            android:id="@+id/progress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:clickable="true"
+            android:focusable="true">
+
+            <ProgressBar
+                android:layout_centerInParent="true"
+                android:layout_width="60dp"
+                android:layout_height="60dp" />
+        </RelativeLayout>
+
+        <!-- 프로그램 실행중 오버레이 -->
+        <RelativeLayout
+            android:id="@+id/program_run"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:background="#65000000"
+            android:clickable="true"
+            android:focusable="true">
+
+            <TextView
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="프로그램 실행중입니다."
+                android:textSize="17sp" />
+        </RelativeLayout>
+
+    </RelativeLayout>
 </LinearLayout>
